[gd_scene load_steps=6 format=3 uid="uid://c68x8t5pb6r47"]

[ext_resource type="Script" uid="uid://djafky1a5rapm" path="res://scenes/weapons/tank.gd" id="1_mbqws"]
[ext_resource type="Texture2D" uid="uid://con2eydohxiba" path="res://assets/weapons/turret.png" id="2_3a5d7"]
[ext_resource type="Texture2D" uid="uid://bc7k1ta5olpu2" path="res://assets/weapons/bullets/red_bullet.png" id="3_3a5d7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3a5d7"]
radius = 27.504545

[sub_resource type="CircleShape2D" id="CircleShape2D_mbqws"]
radius = 104.75209

[node name="Tank" type="Node2D"]
script = ExtResource("1_mbqws")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(3.8146973e-06, 1)
scale = Vector2(0.06, 0.056)
texture = ExtResource("2_3a5d7")
offset = Vector2(7.6000004, 0)

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(-0.5, 0.5)
shape = SubResource("CircleShape2D_3a5d7")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_mbqws")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 130.0
offset_bottom = 85.0
pivot_offset = Vector2(5, -1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Details"
horizontal_alignment = 1

[node name="BulletSelect" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/BulletSelect"]
layout_mode = 2
text = "Bullet Type"

[node name="Control" type="Control" parent="CanvasLayer/PanelContainer/VBoxContainer/BulletSelect"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="ColorButton" type="TextureButton" parent="CanvasLayer/PanelContainer/VBoxContainer/BulletSelect/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 2.0
offset_right = -3.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(9, 10)
texture_normal = ExtResource("3_3a5d7")
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrade"

[connection signal="input_event" from="CollisionArea" to="." method="_on_collision_area_input_event"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="attack"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/BulletSelect/Control/ColorButton" to="." method="_on_color_button_pressed"]
